# QuizBuzzerSystem

./: .gitignore  Cargo.toml  README.md  cargo.toml
.github/workflows/: ci.yml
WebServer/: Cargo.toml
WebServer/config/: config_prod.toml
WebServer/src/: app_config.rs  main.rs
WebServer/src/typescript/: counter.ts  di.ts  http.service.ts  question.service.ts  scorepage.ts  tsconfig.json
WebServer/src/webpages/: counter.html  index.html  scorepage.html
WebServer/static/html/: counter.html  index.html  scorepage.html
WebServer/static/js/: backend.service.js  counter.js  di.js  game.js  http.service.js  question.service.js  scorepage.js
devboard/: Cargo.toml  README.md  memory.x
devboard/.cargo/: config.toml
devboard/src/: button_tasks.rs  http.rs  lib.rs
web-server/: Cargo.toml  build.rs
web-server/config/: config_dev.toml  config_prod.toml
web-server/src/: app_config.rs  audio.rs  devboard_controller.rs  frontend_controller.rs  game.rs  lib.rs  main.rs
web-server/src/game/: mod.rs  quiz_game.rs  reaction_time_game.rs  sound_check.rs
web-server/src/typescript/: backend.service.ts  counter.ts  di.ts  game.ts  index.ts  quiz-game.ts  reaction-game.ts  sound-game.ts  tsconfig.json
web-server/static/css/: index.css  quiz-game.css  reaction-game.css  scorepage.css
web-server/static/html/: game.html  index.html  quiz-game.html  reaction-game.html  scorepage.html  sound-game.html
