[workspace]
members = ["web-server"]

# For the devboard member to work, we need to force the target
# `thumbv7em-none-eabihf` for this package. However forcing this
# via the unstable feature `per-package-target`, we break some
# dependencies of it. Until resolved, we exclude this member.
exclude = ["devboard"]
