[package]
name = "WebServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-cors = "0.6.4"
actix-files = "0.6.2"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
base64 = "0.21.0"
