[package]
name = "quiz-buzzer-system"
version = "0.1.0"
authors = ["ESR Labs"]
edition = "2021"
license = "MIT OR Apache-2.0"

[patch."https://github.com/embassy-rs/embassy.git"]
embassy-stm32 = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-executor = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-sync = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-time = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-net = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }

#embassy-stm32 = { path = "../../embassy/embassy-stm32" }
#embassy-executor = { path = "../../embassy/embassy-executor" }
#embassy-sync = { path = "../../embassy/embassy-sync" }
#embassy-time = { path = "../../embassy/embassy-time" }
#embassy-net = { path = "../../embassy/embassy-net" }

[dependencies]
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "defmt", "stm32h745xi-cm7", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet", "unstable-traits", "proto-ipv6"] }
embedded-io = { version = "0.4.0", features = ["async"] }
#embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
serde = { version = "1.0",default-features = false, features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde-json-core = "0.5.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
#embedded-hal = "0.2.6"
#embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.10" }
#embedded-hal-async = { version = "=0.2.0-alpha.1" }
embedded-nal-async = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
rand_core = "0.6.3"
#critical-section = "1.1"
#micromath = "2.0.0"
#stm32-fmc = "0.2.4"
#embedded-storage = "0.3.0"
static_cell = "1.0"
format_no_std = "1.0.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
