[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
config = "0.13.3"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
base64 = "0.21.0"
